--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "license": "MIT",
+  "name": "minted_font_server",
+  "license": "All Rights Reserved",
+  "author": "Minted LLC",
+  "description": "Font server for minteds web fonts",
   "scripts": {
+    "start": "node server.js",
     "lint": "./node_modules/eslint/bin/eslint.js ."
   },
   "devDependencies": {
